# jellyfin-desktop

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  justfile  renovate.json  sgconfig.yml
src/: CMakeLists.txt  Cargo.toml  cli.cpp  cli.h  color.h  common.h  event_dispatcher.cpp  event_dispatcher.h  event_queue.h  jellyfin_api.cpp  jellyfin_api.h  log_redact.cpp  log_redact.h  logging.cpp  logging.h  main.cpp  settings.cpp  settings.h  shutdown.cpp  shutdown.h  signal_guard.h  single_instance.cpp  theme_color.h  titlebar_color.h  wake_event.cpp  wake_event.h  wake_event_linux.cpp  wake_event_macos.cpp  wake_event_windows.cpp
src/browser/: about_browser.cpp  about_browser.h  app_menu.cpp  app_menu.h  browsers.cpp  browsers.h  overlay_browser.cpp  overlay_browser.h  web_browser.cpp  web_browser.h
src/cef/: cef_app.cpp  cef_app.h  cef_client.cpp  cef_client.h  color.cpp  color.h  resource_handler.cpp  resource_handler.h
src/cli/: Cargo.toml  cli.h
src/cli/src/: lib.rs
src/clipboard/: wayland.cpp  wayland.h  wayland_ffi.cpp
src/color/: Cargo.toml  color.h
src/color/src/: lib.rs  theme.rs
src/compositor_core/: Cargo.toml
src/compositor_core/src/: lib.rs  stack.rs  transition.rs
src/config/: Cargo.toml  config.h
src/config/src/: lib.rs
src/context/: vulkan_context.cpp
src/gpu_paint/: Cargo.toml
src/gpu_paint/src/: context.rs  dmabuf_import.rs  error.rs  lib.rs  painter.rs  types.rs
src/idle_inhibit_linux/: Cargo.toml  jfn_idle_inhibit_linux.h
src/idle_inhibit_linux/src/: lib.rs
src/input/: Cargo.toml  InputComponent.h  InputSocket.cpp  dispatch.cpp  dispatch.h  hotkeys.cpp  hotkeys.h  input.h  input_macos.h  input_macos.mm  input_wayland.cpp  input_wayland.h  input_windows.cpp  input_windows.h  input_x11.cpp  input_x11.h  jfn_hotkey.h  keysym_map.h
src/input/src/: buttons.rs  keysym.rs  lib.rs  scroll.rs
src/jellyfin/: Cargo.toml  api.cpp  api.h  device_profile.cpp  device_profile.h  jfn_jellyfin.h
src/jellyfin/src/: lib.rs
src/jfn_cef/: Cargo.toml  build.rs
src/jfn_cef/src/: app.rs  app_menu.rs  bridge.rs  browsers.rs  business_about.rs  business_common.rs  business_overlay.rs  business_web.rs  client.rs  client_impl.rs  embedded_js.rs  ffi.rs  injection.rs  ipc.rs  lib.rs  menu_ownership.rs  paint_scheduler.rs  platform_ops.rs  pump.rs  resource.rs  sink_routing.rs  state.rs  v8_handler.rs  version.rs  window_controls.rs  window_sync.rs
src/jfn_rust/: Cargo.toml  build.rs
src/jfn_rust/src/: app.rs  cli.rs  instance_id.rs  lib.rs  main.rs  manager.rs  platform_install.rs  signal_guard.rs  single_instance.rs  window_geometry.rs  wl_interpose.rs
src/linux_util/: Cargo.toml  build.rs
src/linux_util/src/: cli.rs  dmabuf_probe.rs  egl_dyn.rs  idle_inhibit.rs  input.rs  lib.rs  open_url.rs  wl_display_registry.rs  xkb.rs
src/log_redact/: Cargo.toml  jfn_log_redact.h
src/log_redact/src/: lib.rs
src/logging/: Cargo.toml  jfn_logging.h
src/logging/src/: lib.rs  redact.rs
src/macos/: Cargo.toml  build.rs
src/macos/src/: cef_host.rs  cef_pump.rs  compositor.rs  context_menu.rs  dropdown.rs  init.rs  input.rs  lib.rs  mpv_host.rs  ns_menu.rs  popup.rs
src/macos_sink/: Cargo.toml
src/macos_sink/src/: lib.rs
src/menu/: Cargo.toml
src/menu/src/: interaction_fsm.rs  lib.rs  render.rs
src/mpris/: Cargo.toml
src/mpris/src/: lib.rs  projection.rs  sink.rs
src/mpv/: Cargo.toml  build.rs  capabilities.cpp  capabilities.h  color.cpp  color.h  event.cpp  event.h  handle.h  jfn_mpv_api.h  jfn_mpv_boot.h  options.h
src/mpv/src/: api.rs  boot.rs  capabilities.rs  color.rs  command.rs  error.rs  event.rs  event_loop.rs  handle.rs  lib.rs  log.rs  node.rs  options.rs  probe.rs  property.rs  sys.rs
src/open_url_linux/: Cargo.toml  jfn_open_url_linux.h
src/open_url_linux/src/: lib.rs
src/paths/: Cargo.toml  jfn_paths.h  linux.cpp  macos.cpp  paths.cpp  paths.h  windows.cpp
src/paths/src/: imp_linux.rs  imp_macos.rs  imp_windows.rs  lib.rs
src/platform/: display_backend.h  idle_inhibit_linux.cpp  idle_inhibit_linux.h  macos.mm  macos_layer.mm  macos_platform.h  open_url_linux.cpp  open_url_linux.h  platform.h  platform_ops.cpp  platform_ops.h  wayland.cpp  wayland.h  wayland_scale_probe.cpp  wayland_scale_probe.h  windows.cpp  windows_video_surface.cpp  x11.cpp  x11_video_layer.cpp
src/platform_abi/: Cargo.toml
src/platform_abi/src/: cef_host.rs  context_menu.rs  dropdown.rs  geometry.rs  lib.rs  media_sink.rs  mpv_host.rs  process_other.rs  (+4 more)
src/playback/: Cargo.toml  coordinator.cpp  coordinator.h  event.h  jfn_dispatcher.h  jfn_ingest.h  jfn_playback.h  jfn_wake_event.h  sinks.h  state_machine.cpp  state_machine.h
src/player/: AlbumArtProvider.cpp  PlayerComponent.cpp  PlayerComponent.h  media_session.cpp  media_session.h
src/settings/: SettingsComponent.cpp  SettingsComponent.h
src/shutdown/: jfn_shutdown.h
src/signal_guard/: Cargo.toml  jfn_signal_guard.h
src/single_instance/: Cargo.toml  jfn_single_instance.h
src/system/: SystemComponent.h
src/ui/: EventFilter.cpp  webview.qml
src/utils/: Utils.cpp
src/wake_event/: Cargo.toml
src/wayland/: Cargo.toml  jfn_clipboard_wayland.h  jfn_dmabuf_probe.h  jfn_fade.h  jfn_input_wayland.h  jfn_kde_palette.h  jfn_wayland_scale_probe.h  jfn_wl_core.h  jfn_wl_proxy.h
src/web/: about.html  about.js  client-settings.js  connectivityHelper.js  context-menu.js  csd.js  find-webclient.css  find-webclient.js  index.html  input-plugin.js  mpv-audio-player.js  mpv-player-base.js  mpv-player-core.js  mpv-video-player.js  native-shim.js  overlay.css  overlay.html  overlay.js  overlay.lang.js  select-menu.js
src/windows/: Cargo.toml
src/windows_sink/: Cargo.toml
src/wlproxy/: Cargo.toml  wlproxy.h
src/x11/: Cargo.toml
src/xtask/: Cargo.toml
tests/: CMakeLists.txt  cef_color_test.cpp  cli_test.cpp  jellyfin_api_test.cpp  log_redact_test.cpp  mpris_projection_test.cpp  mpv_color_test.cpp  playback_coordinator_test.cpp  playback_state_machine_test.cpp  settings_test.cpp  test_log.cpp  test_settings.cpp  test_systemcomponent.cpp
(+251 files in other folders)
