[workspace]
resolver = "3"
members = [
    "cli",
    "color",
    "config",
    "idle_inhibit_linux",
    "input",
    "jellyfin",
    "jfn_cef",
    "jfn_rust",
    "logging",
    "macos",
    "macos_sink",
    "mpv",
    "open_url_linux",
    "paths",
    "platform_abi",
    "playback",
    "signal_guard",
    "single_instance",
    "wayland",
    "windows",
    "windows_sink",
    "wlproxy",
    "x11",
    "xtask",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
