[package]
name = "jfn-compositor-core"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_compositor_core"
crate-type = ["rlib"]

# Pure logic — no platform deps. Compiles and unit-tests on every host so
# the macOS/Windows compositors can share (and verify) this bookkeeping
# without a target build.

[lints]
workspace = true
