[package]
name = "jfn-config"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_config"
crate-type = ["rlib"]

[dependencies]
jfn-paths = { path = "../paths" }
jfn-platform-abi = { path = "../platform_abi" }
parking_lot.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }

[lints]
workspace = true
