[package]
name = "jfn-gpu-paint"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_gpu_paint"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true

# The crate is `#![cfg(target_os = "linux")]`; empty rlib elsewhere so the
# workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
tracing.workspace = true
libc.workspace = true
thiserror = "2"
raw-window-handle = "0.6"
wgpu = "29"
pollster = "0.4"

[lints]
workspace = true
